syntax = "proto3";

package config;

option go_package="github.com/pydio/cells/common/proto/config";

service Config {
  rpc Get(GetRequest) returns (GetResponse) {}
  rpc Set(SetRequest) returns (SetResponse) {}
  rpc Delete(DeleteRequest) returns (DeleteResponse) {}
  rpc Watch(WatchRequest) returns (stream WatchResponse) {}
}

message Value {
  string data = 1;
  string format = 2;
}

message Options {
  // Is it an encrypted value?
  bool secret = 1;
}

message SetRequest {
  string namespace = 1;
  string path = 2;
  Value value = 3;
  Options options = 4;
}

message SetResponse {}

message DeleteRequest {
  string namespace = 1;
  string path = 2;
}

message DeleteResponse {}

message GetRequest {
  string namespace = 1;
  string path = 2;
  Options options = 3;
}

message GetResponse {
  Value value = 1;
}

message WatchRequest {
  string namespace = 1;
  string path = 2;
  Options options = 3;
}

message WatchResponse {
  Value value = 1;
}